// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers stat MERGE_STATS_FILTERS should merge stats filters 1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "score": 4,
    "tags": Immutable.List [
      1,
      2,
      4,
    ],
    "agents": Immutable.List [
      1,
    ],
  },
}
`;

exports[`reducers stat RESET_STATS_FILTERS shoud reset stats filters  1`] = `
Immutable.Map {
  "filters": null,
}
`;

exports[`reducers stat SET_STATS_FILTERS should set stats filters 1`] = `
Immutable.Map {
  "filters": Immutable.Map {
    "tags": Immutable.List [
      1,
      2,
      4,
    ],
    "agents": Immutable.List [
      1,
    ],
  },
}
`;

exports[`reducers stat should return initial state 1`] = `
Immutable.Map {
  "filters": null,
}
`;
